2002-11-16  Theodore A. Roth  <troth@openavr.org>

	* doc/api/faq.dox: Add \code and \endcode around example. D'oh!
	* doc/api/using-tools.dox: Use \verbatim instead of <code>.
	* include/avr/pgmspace.h: Put both #includes in a single \code statement.

2002-11-16  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Fix broken subject headers (doxygen-1.2.18 doesn't
		like them being bold when generating ps or pdf).
	Change \subsection to \section since doxygen-1.2.18 handles it properly
		now.
	New FAQ entry for arrays of strings in rom.
	* doc/api/inline_asm.dox: Change \subsection to \section since
		doxygen-1.2.18 handles it properly now.
	* doc/api/malloc.dox: Ditto.
	* doc/api/sections.dox: Ditto.
	* doc/api/tools-install.dox: Ditto.
	* doc/examples/demo/demo.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	Change <h3> headings to \subsection's.

2002-11-12  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/TODO: Add note about missing io*.h files.
	* doc/api/main_page.dox: Update notes for at94K and at76c711.
	* include/avr/io.h: Include existing io76c711.h file.

2002-11-12  Theodore A. Roth  <troth@openavr.org>
	[thanks to Juergen Schilling <juergen.schilling@honeywell.com>]

	* include/avr/iom169.h: Fix interrupt vector defs.
	Remove duplicate PINE defs.
	Add PING defs.

2002-11-12  Theodore A. Roth  <troth@openavr.org>

	* avr-libc.spec.in: Add --enable-doc to configure command.

2002-11-11  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Add --enable-doc option and disable building of docs
	as the default.
	* doc/TODO: Remove note about sleep api.
	* doc/api/Makefile.am: Remove sending error to /dev/null since that
	confuses windows systems.

2002-11-11  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/eeprom.h (eeprom_read_byte): New function, replaces
	eeprom_rb.